TEST: fix tests